--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -6,8 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.116.1",
-    "pydantic>=2.11.7",
     "uvicorn[standard]>=0.35.0",
+    "sqlalchemy[asyncio]>=2.0",
+    "asyncpg>=0.30.0",
 ]
 
 [dependency-groups]
