--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -10,6 +10,10 @@ dependencies = [
     "sqlalchemy[asyncio]>=2.0",
     "asyncpg>=0.30.0",
     "pydantic[email]>=2.11.7",
+    "openai>=1.0.0",
+    "anthropic>=0.25.0",
+    "httpx>=0.25.0",
+    "google-genai>=1.33.0",
 ]
 
 [dependency-groups]
