--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,7 +19,10 @@
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
     "db:seed": "tsx prisma/seed.ts",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "db:setup": "prisma db push",
+    "vercel-build": "prisma generate && prisma db push && next build",
+    "db:fix": "node scripts/fix-db.js"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
