--- a/apps/frontend/vercel.json
+++ b/apps/frontend/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "pnpm run build",
+  "buildCommand": "pnpm run vercel-build",
   "installCommand": "pnpm install",
   "framework": "nextjs",
   "functions": {
