--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -21,9 +21,7 @@
     "db:seed": "tsx prisma/seed.ts",
     "postinstall": "prisma generate",
     "db:setup": "prisma db push",
-    "vercel-build": "prisma generate && prisma db push --force-reset && next build",
-    "db:fix": "node scripts/fix-db.js",
-    "db:migrate": "node scripts/migrate-db.js"
+    "vercel-build": "prisma generate && prisma db push --force-reset && next build"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
