fixing text streaming & local time

--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "anthropic>=0.25.0",
     "httpx>=0.25.0",
     "google-genai>=1.33.0",
+    "pytz>=2025.2",
 ]
 
 [dependency-groups]
