--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "httpx>=0.25.0",
     "google-genai>=1.33.0",
     "pytz>=2025.2",
+    "google-search-results>=2.4.2",
 ]
 
 [dependency-groups]
